--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.2.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "next": "13.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-particles": "^2.9.3",
+    "sass": "^1.58.3",
+    "tsparticles": "^2.9.3",
+    "typed.js": "^2.0.12"
   }
 }
